--- a/.github/workflows/output.yml
+++ b/.github/workflows/output.yml
@@ -1,8 +1,8 @@
-name: Output workflows information
-on: workflow_dispatch
+name: Output issues info
+on: issues
 jobs:
   output:
     runs-on: ubuntu-latest
     steps:
       - name: Print information
-        run: echo "${{ toJSON(github) }}"
+        run: echo "${{ toJSON(github.event) }}"
